# ctx

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  deny.toml
.agents/skills/setup/: SKILL.md
.claude-plugin/: marketplace.json
.claude/skills/setup/: SKILL.md
config/: schema.toml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  output.rs  parse.rs
crates/db/: Cargo.toml
crates/db/src/: conn.rs  crud.rs  lib.rs  retry.rs  schema_registry.rs  sql.rs  sync.rs  types.rs
crates/graph/: Cargo.toml
crates/graph/src/: edge_path.rs  lib.rs  path_find.rs  search.rs  traverse.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/cli/: edge_cases.rs  edges.rs  harness.rs  main.rs  nodes.rs  query.rs  traversal.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  parse.rs  types.rs  validate.rs  views.rs
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/scripts/: session-start.sh
plugin/skills/graph-context/: SKILL.md
plugin/skills/ingest-session/: SKILL.md
plugin/skills/setup/: SKILL.md
